--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ section{
     margin-top: 1rem;
     font-size: 2rem;
     border-radius: 5rem;
+    border:1px solid rgb(150, 117, 180)
 }
 
 .btn i{
